Make other contours visible during step-2. Fix #40

--- a/css/svg.styl
+++ b/css/svg.styl
@@ -134,7 +134,6 @@ div.contours
       g.contours
         g.contour-group
           pointer-events none
-          display none
           
           &.selected, &.matched
             display block
@@ -144,6 +143,12 @@ div.contours
               display block
               fill-opacity 0
               stroke-dasharray 5,5
+
+  &.step-1, &.step-3
+    svg
+      g.contours
+        g.contour-group
+          display none
 
   &.step-1
     svg
